# genai-bootcamp

./: .env-template  .gitignore  README.md  env-template  genai-bootcamp-06-2023-d461ae37726b.json  pyproject.toml  requirements.txt  setup.py
archive/: README.md
archive/2023_june/: .gitignore  README.md  pyproject.toml  pyproject.toml.txt  requirements.txt
archive/2023_june/notebooks/day-1/: 00-faq.md  01-api-access.ipynb  02-example-chatbot.ipynb
archive/2023_june/notebooks/day-2/: 01-langchain.ipynb  03-interfaces.ipynb  09-train-deploy.ipynb
archive/2023_june/notebooks/day-2/finetuning/: requirements.txt
archive/2023_june/notebooks/day-2/outputs/: gpt-3.5-turbo_f42b2ac2ad72532387cbcae25c2fd1df.csv
archive/2023_june/notebooks/extra_resources/: google_notebooks.md  hf-langchain.ipynb
archive/2023_june/src/genai_bootcamp/interfaces/: helloworld.py
docs/: google-cloud.md
notebooks/: 00-test_environment.ipynb  01-data.ipynb  01-data_preprocessing.ipynb  02-chunking.ipynb  02-data_next_steps.ipynb  03-embedding.ipynb  04-indexing.ipynb  05-rag.ipynb  06-pipelines.ipynb  07-advanced_rag.ipynb  resources.md  start_here.ipynb  utils.py
notebooks/day-1/: 00-faq.md  00-readme.md  01-api-access.ipynb  02-example-chatbot.ipynb  02-prompting-basics.ipynb  03-example-classification.ipynb  03-example-entity-extraction.ipynb  03-examples.ipynb  04-example-summarization.ipynb  04-function-calling.ipynb  05-example-code-agent.ipynb  05-example-code-generator.ipynb  05-example-entity-extraction.ipynb  05-reasoning.ipynb  06-example-classification.ipynb  06-example-code-generator.ipynb  06-rag.ipynb  07-best-practices.ipynb  07-next-steps-fine-tuning.ipynb  08-next-steps-RLHF.ipynb  rag_dataset.json  tools.py
notebooks/day-2/: 00-langchain.ipynb  01-fine-tuning.ipynb  01-interfaces-streamlit.md  01-langchain.ipynb  01-tools-and-libs.ipynb  01.1-streamlit-example-1.py  02-agents-and-toolkits.ipynb  02-agents.ipynb  02-label-studio.md  02-memory-vector-dbs.ipynb  02-tools-and-libs.ipynb  02.2-st-AB-datagen.py  03-agents-and-toolkits.ipynb  03-deployment.ipynb  03-label-studio.md  04-deployment.ipynb  04-evaluation.ipynb  04-interfaces.ipynb  04-label-studio-examples.ipynb  05-deployment-HF.ipynb  06-fine-tuning.ipynb  07-RLHF.ipynb  08-evaluate-robustness.ipynb  09-train-deploy.ipynb  DEP_02-memory-vector-dbs.ipynb  README.md
notebooks/day-2/finetuning/: example.sh  requirements.txt  seq2seq.py
notebooks/day-2/outputs/: gpt-3.5-turbo_35d27f2118df1634af2fc8f06882eb32.csv
notebooks/day-2/outputs/label_studio/annotations/: project-6-at-2023-06-09-22-29-8e9657b4.json
notebooks/day-2/outputs/label_studio/tasks/: task_1.json
notebooks/evaluation/: 01-llm-app-setup.ipynb  02-dataset-creation.ipynb  03-metrics-definition.ipynb  04-app-evaluation.ipynb  05-optional-langsmith.ipynb  06-optional-langfuse.ipynb
notebooks/extra_resources/: NvidiaDocumentationQandApairs_trim.csv  PrivateAI Demo.ipynb  candy-data-dirty.csv  hf-langchain.ipynb
src/genai_bootcamp/interfaces/: AB-datagen.py
src/genai_bootcamp/langchain/: llms.py
tests/: test_installation.py
