[tool.poetry]
name = "genai-bootcamp"
version = "0.1.0"
description = ""
authors = ["Akash Saravanan <akash.saravanan@georgian.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
datasets = "^2.19.1"
llama-index = "^0.10.40"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
torch = "2.2.0"
torchvision = "0.17.0"
torchaudio = "2.2.0"
mwparserfromhell = "^0.6.6"
llama-index-embeddings-huggingface = "^0.2.1"
llama-index-vector-stores-lancedb = "^0.1.4"
openai = "^1.30.5"
llama-index-llms-anyscale = "^0.1.4"
llama-index-llms-openai = "^0.1.22"
poetry-plugin-export = "^1.8.0"
ragas = "^0.1.9"
evaluate = "^0.4.2"
pydantic = "^2.7.4"
llama-index-program-openai = "^0.1.6"
absl-py = "^2.1.0"
rouge-score = "^0.1.2"
langfuse = "^2.36.1"
tornado = "^6.4.1"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
